<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroActivity">

    <ImageView
        android:layout_width="283dp"
        android:layout_height="392dp"
        android:src="@drawable/intro"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/alice"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:textColor="#3a1f04"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade_coffee_health_and_quality_with_your_smartphone"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/alice"
        android:textStyle="bold"
        android:textColor="#3a1f04"/>

    <Button
        android:id="@+id/get"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:fontFamily="@font/alice"
        android:textSize="15sp"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/about"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:fontFamily="@font/alice"
        android:background="@drawable/button"
        android:text="@string/aboute" />

</LinearLayout>