<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        android:translationZ="0.1dp"
        app:menu="@menu/menu_setting"
        app:title="Dashboard"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/deteksi"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/moisture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/disease_checker"
                    android:layout_marginTop="12dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/moisture"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/diseanse"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:text="@string/moisture_level_tester"
                    android:layout_marginTop="12dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="1"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/daftar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/list"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:text="@string/list_of_coffee_plant_diseases"
                    android:layout_marginTop="12dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </GridLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="299dp"
        android:layout_gravity="center"
        android:src="@drawable/intro" />


</LinearLayout>